crates/toml/tests/snapshots/invalid/key/without-value-02.stderr
TOML parse error at line 1, column 7
  |
1 | key = 
  |       ^
string values must be quoted, expected literal string
